# sorting_components_benchmark_paper

./: README.md
notebooks/: clustering_drifting.ipynb  clustering_drifting.py  configuration.py  dataset.py  detection_method.ipynb  detection_method.py  figure_dataset.ipynb  matching_drift.ipynb  matching_drift.py  matching_drift_aware.ipynb  matching_drift_aware.py  slurm_tools.py  sorters_simulation.ipynb  sorters_simulation.py  sorters_simulation_other_probes.ipynb  sorters_simulation_other_probes.py
notebooks/real_data_figure/: figure.typ  generate_curation_data.py  make_drift_plots.py  pyproject.toml  sort_all_real_data.py  sort_one_piece_of_data.py
