[project]
name = "real-data-figure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "scikit-learn==1.6",
    "skops>=0.14.0",
    "spikeinterface>=0.104.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
