[project]
name = "real-data-figure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.16.0",
    "hdbscan>=0.8.42",
    "ipykernel>=7.2.0",
    "kilosort==4.1.2",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "pandas>=3.0.2",
    "scikit-learn==1.6",
    "scipy>=1.17.1",
    "skops>=0.14.0",
    "spikeinterface>=0.104.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
